--- a/examples/openllama-3b/qlora.yml
+++ b/examples/openllama-3b/qlora.yml
@@ -1,5 +1,5 @@
-base_model: openlm-research/open_llama_3b
-base_model_config: openlm-research/open_llama_3b
+base_model: openlm-research/open_llama_3b_v2
+base_model_config: openlm-research/open_llama_3b_v2
 model_type: LlamaForCausalLM
 tokenizer_type: LlamaTokenizer
 load_in_8bit: false
@@ -7,8 +7,8 @@ load_in_4bit: true
 strict: false
 push_dataset_to_hub:
 datasets:
-  - path: teknium/GPT4-LLM-Cleaned
-    type: alpaca
+  - path: LDJnr/Puffin
+    type: vicuna
 dataset_prepared_path: last_run_prepared
 val_set_size: 0.01
 adapter: qlora
@@ -17,7 +17,7 @@ sequence_len: 2048
 max_packed_sequence_len: 2048
 lora_r: 8
 lora_alpha: 32
-lora_dropout: 0.05
+lora_dropout: 0.10
 lora_target_modules:
 lora_target_linear: true
 lora_fan_in_fan_out:
@@ -33,7 +33,7 @@ num_epochs: 2
 optimizer: paged_adamw_32bit
 torchdistx_path:
 lr_scheduler: cosine
-learning_rate: 0.0002
+learning_rate: 0.0001
 train_on_inputs: false
 group_by_length: false
 bf16: true
