--- a/examples/openllama-3b/qlora.yml
+++ b/examples/openllama-3b/qlora.yml
@@ -8,7 +8,7 @@ strict: false
 push_dataset_to_hub:
 datasets:
   - path: LDJnr/Puffin
-    type: vicuna
+    type: sharegpt:chat
 dataset_prepared_path: last_run_prepared
 val_set_size: 0.01
 adapter: qlora
