--- a/examples/openllama-3b/qlora.yml
+++ b/examples/openllama-3b/qlora.yml
@@ -38,7 +38,7 @@ train_on_inputs: false
 group_by_length: false
 bf16: true
 fp16: false
-tf32: true
+tf32: false
 gradient_checkpointing: true
 early_stopping_patience:
 resume_from_checkpoint:
