--- a/examples/openllama-3b/qlora.yml
+++ b/examples/openllama-3b/qlora.yml
@@ -29,7 +29,7 @@ wandb_log_model:
 output_dir: ./qlora-out
 batch_size: 4
 micro_batch_size: 4
-num_epochs: 1
+num_epochs: 2
 optimizer: adamw_bnb_8bit
 torchdistx_path:
 lr_scheduler: cosine
@@ -50,7 +50,7 @@ gptq_groupsize:
 gptq_model_v1:
 warmup_steps: 10
 eval_steps: 20
-save_steps:
+save_steps: 340
 debug:
 deepspeed:
 weight_decay: 0.0
