--- a/examples/openllama-3b/qlora.yml
+++ b/examples/openllama-3b/qlora.yml
@@ -29,7 +29,7 @@ wandb_log_model:
 output_dir: ./qlora-out
 batch_size: 4
 micro_batch_size: 4
-num_epochs: 2
+num_epochs: 1
 optimizer: adamw_bnb_8bit
 torchdistx_path:
 lr_scheduler: cosine
@@ -43,14 +43,14 @@ gradient_checkpointing: true
 early_stopping_patience:
 resume_from_checkpoint:
 local_rank:
-logging_steps: 1
+logging_steps: 10
 xformers_attention: true
 flash_attention:
 gptq_groupsize:
 gptq_model_v1:
 warmup_steps: 10
-eval_steps: 20
-save_steps: 340
+eval_steps: 10
+save_steps: 
 debug:
 deepspeed:
 weight_decay: 0.0
