--- a/examples/cerebras/qlora.yml
+++ b/examples/cerebras/qlora.yml
@@ -5,7 +5,7 @@ load_in_4bit: true
 strict: false
 push_dataset_to_hub:
 datasets:
-  - path: teknium/GPT4-LLM-Cleaned
+  - path: sahil2801/CodeAlpaca-20k
     type: alpaca
 dataset_prepared_path: last_run_prepared
 val_set_size: 0.01
@@ -28,9 +28,9 @@ wandb_watch:
 wandb_run_id:
 wandb_log_model:
 output_dir: ./qlora-out
-batch_size: 4
-micro_batch_size: 4
-num_epochs: 2
+batch_size: 32
+micro_batch_size: 16
+num_epochs: 10
 optimizer: paged_adamw_8bit
 torchdistx_path:
 lr_scheduler: cosine
@@ -45,12 +45,12 @@ early_stopping_patience:
 resume_from_checkpoint:
 local_rank:
 logging_steps: 1
-xformers_attention: true
+xformers_attention: false
 flash_attention:
 gptq_groupsize:
 gptq_model_v1:
 warmup_steps: 10
-eval_steps: 20
+eval_steps: 
 save_steps:
 debug:
 deepspeed:
